# serializer version: 1
# name: test_with_3_7_0_firmware
  dict({
    'active_inverter_count': 8,
    'battery_storage': 'Battery storage data not available for your Envoy device.',
    'consumption': 'CTs consumption data not available for your Envoy device.',
    'consumption l1': None,
    'consumption l2': None,
    'consumption l3': None,
    'consumption_Current': 'Amps consumption data not available for your Envoy device.',
    'consumption_meters_phase_count': 0,
    'daily_consumption': 'CTs consumption data not available for your Envoy device.',
    'daily_consumption_phase l1': None,
    'daily_consumption_phase l2': None,
    'daily_consumption_phase l3': None,
    'daily_production': 3450,
    'daily_production_phase l1': None,
    'daily_production_phase l2': None,
    'daily_production_phase l3': None,
    'endpoint_type': 'P0',
    'frequency': 'Frequency data not available for your Envoy device.',
    'frequency l1': None,
    'frequency l2': None,
    'frequency l3': None,
    'get_inverters': False,
    'grid_status': None,
    'has_grid_status': True,
    'https_flag': '',
    'inverters_production': None,
    'isConsumptionMeteringEnabled': False,
    'isProductionMeteringEnabled': False,
    'lifetime_consumption': 'CTs consumption data not available for your Envoy device.',
    'lifetime_consumption l1': None,
    'lifetime_consumption l2': None,
    'lifetime_consumption l3': None,
    'lifetime_net_consumption': 'CTs consumption data not available for your Envoy device.',
    'lifetime_net_consumption l1': None,
    'lifetime_net_consumption l2': None,
    'lifetime_net_consumption l3': None,
    'lifetime_net_production': 'CTs consumption data not available for your Envoy device.',
    'lifetime_net_production l1': None,
    'lifetime_net_production l2': None,
    'lifetime_net_production l3': None,
    'lifetime_production': 165000000,
    'lifetime_production_phase l1': None,
    'lifetime_production_phase l2': None,
    'lifetime_production_phase l3': None,
    'net_consumption': 'CTs consumption data not available for your Envoy device.',
    'net_consumption l1': None,
    'net_consumption l2': None,
    'net_consumption l3': None,
    'net_consumption_meters_type': False,
    'pf': 'Power Factor data not available for your Envoy device.',
    'pf l1': None,
    'pf l2': None,
    'pf l3': None,
    'production': 3140,
    'production_Current l1': None,
    'production_Current l2': None,
    'production_Current l3': None,
    'production_meters_phase_count': 0,
    'production_phase l1': None,
    'production_phase l2': None,
    'production_phase l3': None,
    'seven_days_consumption': 'CTs consumption data not available for your Envoy device.',
    'seven_days_production': 240000,
    'voltage': 'Voltage data not available for your Envoy device.',
    'voltage l1': None,
    'voltage l2': None,
    'voltage l3': None,
  })
# ---
# name: test_with_3_9_36_firmware
  dict({
    'active_inverter_count': 'Active Inverter count not available for your Envoy device.',
    'battery_storage': 'Battery storage data not available for your Envoy device.',
    'consumption': 'CTs consumption data not available for your Envoy device.',
    'consumption l1': None,
    'consumption l2': None,
    'consumption l3': None,
    'consumption_Current': 'Amps consumption data not available for your Envoy device.',
    'consumption_meters_phase_count': 0,
    'daily_consumption': 'CTs consumption data not available for your Envoy device.',
    'daily_consumption_phase l1': None,
    'daily_consumption_phase l2': None,
    'daily_consumption_phase l3': None,
    'daily_production': 1460,
    'daily_production_phase l1': None,
    'daily_production_phase l2': None,
    'daily_production_phase l3': None,
    'endpoint_type': 'P',
    'frequency': 'Frequency data not available for your Envoy device.',
    'frequency l1': None,
    'frequency l2': None,
    'frequency l3': None,
    'get_inverters': False,
    'grid_status': None,
    'has_grid_status': True,
    'https_flag': '',
    'inverters_production': None,
    'isConsumptionMeteringEnabled': False,
    'isProductionMeteringEnabled': False,
    'lifetime_consumption': 'CTs consumption data not available for your Envoy device.',
    'lifetime_consumption l1': None,
    'lifetime_consumption l2': None,
    'lifetime_consumption l3': None,
    'lifetime_net_consumption': 'CTs consumption data not available for your Envoy device.',
    'lifetime_net_consumption l1': None,
    'lifetime_net_consumption l2': None,
    'lifetime_net_consumption l3': None,
    'lifetime_net_production': 'CTs consumption data not available for your Envoy device.',
    'lifetime_net_production l1': None,
    'lifetime_net_production l2': None,
    'lifetime_net_production l3': None,
    'lifetime_production': 6012540,
    'lifetime_production_phase l1': None,
    'lifetime_production_phase l2': None,
    'lifetime_production_phase l3': None,
    'net_consumption': 'CTs consumption data not available for your Envoy device.',
    'net_consumption l1': None,
    'net_consumption l2': None,
    'net_consumption l3': None,
    'net_consumption_meters_type': False,
    'pf': 'Power Factor data not available for your Envoy device.',
    'pf l1': None,
    'pf l2': None,
    'pf l3': None,
    'production': 1271,
    'production_Current l1': None,
    'production_Current l2': None,
    'production_Current l3': None,
    'production_meters_phase_count': 0,
    'production_phase l1': None,
    'production_phase l2': None,
    'production_phase l3': None,
    'seven_days_consumption': 'CTs consumption data not available for your Envoy device.',
    'seven_days_production': 130349,
    'voltage': 'Voltage data not available for your Envoy device.',
    'voltage l1': None,
    'voltage l2': None,
    'voltage l3': None,
  })
# ---
# name: test_with_4_2_27_firmware
  dict({
    'active_inverter_count': 'Active Inverter count not available for your Envoy device.',
    'battery_storage': 'Battery storage data not available for your Envoy device.',
    'consumption': 'CTs consumption data not available for your Envoy device.',
    'consumption l1': None,
    'consumption l2': None,
    'consumption l3': None,
    'consumption_Current': 'Amps consumption data not available for your Envoy device.',
    'consumption_meters_phase_count': 0,
    'daily_consumption': 'CTs consumption data not available for your Envoy device.',
    'daily_consumption_phase l1': None,
    'daily_consumption_phase l2': None,
    'daily_consumption_phase l3': None,
    'daily_production': 17920,
    'daily_production_phase l1': None,
    'daily_production_phase l2': None,
    'daily_production_phase l3': None,
    'endpoint_type': 'PC',
    'frequency': 'Frequency data not available for your Envoy device.',
    'frequency l1': None,
    'frequency l2': None,
    'frequency l3': None,
    'get_inverters': False,
    'grid_status': None,
    'has_grid_status': True,
    'https_flag': '',
    'inverters_production': None,
    'isConsumptionMeteringEnabled': False,
    'isProductionMeteringEnabled': False,
    'lifetime_consumption': 'CTs consumption data not available for your Envoy device.',
    'lifetime_consumption l1': None,
    'lifetime_consumption l2': None,
    'lifetime_consumption l3': None,
    'lifetime_net_consumption': 'CTs consumption data not available for your Envoy device.',
    'lifetime_net_consumption l1': None,
    'lifetime_net_consumption l2': None,
    'lifetime_net_consumption l3': None,
    'lifetime_net_production': 'CTs consumption data not available for your Envoy device.',
    'lifetime_net_production l1': None,
    'lifetime_net_production l2': None,
    'lifetime_net_production l3': None,
    'lifetime_production': 10279087,
    'lifetime_production_phase l1': None,
    'lifetime_production_phase l2': None,
    'lifetime_production_phase l3': None,
    'net_consumption': 'CTs consumption data not available for your Envoy device.',
    'net_consumption l1': None,
    'net_consumption l2': None,
    'net_consumption l3': None,
    'net_consumption_meters_type': False,
    'pf': 'Power Factor data not available for your Envoy device.',
    'pf l1': None,
    'pf l2': None,
    'pf l3': None,
    'production': 5891,
    'production_Current l1': None,
    'production_Current l2': None,
    'production_Current l3': None,
    'production_meters_phase_count': 0,
    'production_phase l1': None,
    'production_phase l2': None,
    'production_phase l3': None,
    'seven_days_consumption': 'CTs consumption data not available for your Envoy device.',
    'seven_days_production': 276614,
    'voltage': 'Voltage data not available for your Envoy device.',
    'voltage l1': None,
    'voltage l2': None,
    'voltage l3': None,
  })
# ---
# name: test_with_7_6_175_metered
  dict({
    'active_inverter_count': 'Active Inverter count not available for your Envoy device.',
    'battery_storage': 'Battery storage data not available for your Envoy device.',
    'consumption': 278,
    'consumption l1': None,
    'consumption l2': None,
    'consumption l3': None,
    'consumption_Current': 2.272,
    'consumption_meters_phase_count': 1,
    'daily_consumption': 9295,
    'daily_consumption_phase l1': None,
    'daily_consumption_phase l2': None,
    'daily_consumption_phase l3': None,
    'daily_production': 7438,
    'daily_production_phase l1': None,
    'daily_production_phase l2': None,
    'daily_production_phase l3': None,
    'endpoint_type': 'PC',
    'frequency': 50.06,
    'frequency l1': None,
    'frequency l2': None,
    'frequency l3': None,
    'get_inverters': True,
    'grid_status': None,
    'has_grid_status': True,
    'https_flag': 's',
    'inverters_production': dict({
      '12345678001': list([
        201,
        '2023-08-07 15:50:41',
      ]),
      '12345678002': list([
        202,
        '2023-08-07 15:54:13',
      ]),
      '12345678003': list([
        203,
        '2023-08-07 15:55:09',
      ]),
      '12345678004': list([
        204,
        '2023-08-07 15:51:39',
      ]),
      '12345678005': list([
        205,
        '2023-08-07 15:51:11',
      ]),
    }),
    'isConsumptionMeteringEnabled': True,
    'isProductionMeteringEnabled': True,
    'lifetime_consumption': 3902055,
    'lifetime_consumption l1': None,
    'lifetime_consumption l2': None,
    'lifetime_consumption l3': None,
    'lifetime_net_consumption': 3738205,
    'lifetime_net_consumption l1': None,
    'lifetime_net_consumption l2': None,
    'lifetime_net_consumption l3': None,
    'lifetime_net_production': 1776768,
    'lifetime_net_production l1': None,
    'lifetime_net_production l2': None,
    'lifetime_net_production l3': None,
    'lifetime_production': 3226880,
    'lifetime_production_phase l1': None,
    'lifetime_production_phase l2': None,
    'lifetime_production_phase l3': None,
    'net_consumption': -36,
    'net_consumption l1': None,
    'net_consumption l2': None,
    'net_consumption l3': None,
    'net_consumption_meters_type': True,
    'pf': 0.52,
    'pf l1': None,
    'pf l2': None,
    'pf l3': None,
    'production': 0,
    'production_Current l1': None,
    'production_Current l2': None,
    'production_Current l3': None,
    'production_meters_phase_count': 1,
    'production_phase l1': None,
    'production_phase l2': None,
    'production_phase l3': None,
    'seven_days_consumption': 63544,
    'seven_days_production': 81354,
    'voltage': 234.339,
    'voltage l1': None,
    'voltage l2': None,
    'voltage l3': None,
  })
# ---
# name: test_with_7_6_175_metered_multiphase
  dict({
    'active_inverter_count': 'Active Inverter count not available for your Envoy device.',
    'battery_storage': 'Battery storage data not available for your Envoy device.',
    'consumption': 209,
    'consumption l1': 88,
    'consumption l2': 123,
    'consumption l3': -2,
    'consumption_Current': 2.06,
    'consumption_meters_phase_count': 3,
    'daily_consumption': 12423,
    'daily_consumption_phase l1': 8584,
    'daily_consumption_phase l2': 2154,
    'daily_consumption_phase l3': 1683,
    'daily_production': 5113,
    'daily_production_phase l1': 2200,
    'daily_production_phase l2': 1454,
    'daily_production_phase l3': 1458,
    'endpoint_type': 'PC',
    'frequency': 50.0,
    'frequency l1': 50.0,
    'frequency l2': 50.0,
    'frequency l3': 50.0,
    'get_inverters': True,
    'grid_status': None,
    'has_grid_status': True,
    'https_flag': 's',
    'inverters_production': dict({
      '12345678001': list([
        201,
        '2023-08-07 15:50:41',
      ]),
      '12345678002': list([
        202,
        '2023-08-07 15:54:13',
      ]),
      '12345678003': list([
        203,
        '2023-08-07 15:55:09',
      ]),
      '12345678004': list([
        204,
        '2023-08-07 15:51:39',
      ]),
      '12345678005': list([
        205,
        '2023-08-07 15:51:11',
      ]),
    }),
    'isConsumptionMeteringEnabled': True,
    'isProductionMeteringEnabled': True,
    'lifetime_consumption': 4074795,
    'lifetime_consumption l1': 2293782,
    'lifetime_consumption l2': 948057,
    'lifetime_consumption l3': 832954,
    'lifetime_net_consumption': 3738205,
    'lifetime_net_consumption l1': 3738205,
    'lifetime_net_consumption l2': 0,
    'lifetime_net_consumption l3': 0,
    'lifetime_net_production': 1776768,
    'lifetime_net_production l1': 1776768,
    'lifetime_net_production l2': 8279,
    'lifetime_net_production l3': 13980,
    'lifetime_production': 4351113,
    'lifetime_production_phase l1': 1869678,
    'lifetime_production_phase l2': 1241245,
    'lifetime_production_phase l3': 1240189,
    'net_consumption': -36,
    'net_consumption l1': -36,
    'net_consumption l2': 0,
    'net_consumption l3': 0,
    'net_consumption_meters_type': True,
    'pf': 0.41,
    'pf l1': 0.36,
    'pf l2': 0.56,
    'pf l3': 0.0,
    'production': -5,
    'production_Current l1': 0.285,
    'production_Current l2': -0.0,
    'production_Current l3': 0.371,
    'production_meters_phase_count': 3,
    'production_phase l1': -2,
    'production_phase l2': 0,
    'production_phase l3': -2,
    'seven_days_consumption': 68784,
    'seven_days_production': 69492,
    'voltage': 712.829,
    'voltage l1': 236.873,
    'voltage l2': 237.95,
    'voltage l3': 238.006,
  })
# ---
# name: test_with_7_6_175_metered_noct
  dict({
    'active_inverter_count': 'Active Inverter count not available for your Envoy device.',
    'battery_storage': 'Battery storage data not available for your Envoy device.',
    'consumption': 'CTs consumption data not available for your Envoy device.',
    'consumption l1': None,
    'consumption l2': None,
    'consumption l3': None,
    'consumption_Current': 'Amps consumption data not available for your Envoy device.',
    'consumption_meters_phase_count': 3,
    'daily_consumption': 'CTs consumption data not available for your Envoy device.',
    'daily_consumption_phase l1': None,
    'daily_consumption_phase l2': None,
    'daily_consumption_phase l3': None,
    'daily_production': -1,
    'daily_production_phase l1': None,
    'daily_production_phase l2': None,
    'daily_production_phase l3': None,
    'endpoint_type': 'PC',
    'frequency': 'Frequency data not available for your Envoy device.',
    'frequency l1': None,
    'frequency l2': None,
    'frequency l3': None,
    'get_inverters': True,
    'grid_status': None,
    'has_grid_status': True,
    'https_flag': 's',
    'inverters_production': dict({
      '12345678001': list([
        201,
        '2023-08-07 15:50:41',
      ]),
      '12345678002': list([
        202,
        '2023-08-07 15:54:13',
      ]),
      '12345678003': list([
        203,
        '2023-08-07 15:55:09',
      ]),
      '12345678004': list([
        204,
        '2023-08-07 15:51:39',
      ]),
      '12345678005': list([
        205,
        '2023-08-07 15:51:11',
      ]),
    }),
    'isConsumptionMeteringEnabled': False,
    'isProductionMeteringEnabled': False,
    'lifetime_consumption': 'CTs consumption data not available for your Envoy device.',
    'lifetime_consumption l1': None,
    'lifetime_consumption l2': None,
    'lifetime_consumption l3': None,
    'lifetime_net_consumption': 'CTs consumption data not available for your Envoy device.',
    'lifetime_net_consumption l1': None,
    'lifetime_net_consumption l2': None,
    'lifetime_net_consumption l3': None,
    'lifetime_net_production': 'CTs consumption data not available for your Envoy device.',
    'lifetime_net_production l1': None,
    'lifetime_net_production l2': None,
    'lifetime_net_production l3': None,
    'lifetime_production': 1152866,
    'lifetime_production_phase l1': None,
    'lifetime_production_phase l2': None,
    'lifetime_production_phase l3': None,
    'net_consumption': 'CTs consumption data not available for your Envoy device.',
    'net_consumption l1': None,
    'net_consumption l2': None,
    'net_consumption l3': None,
    'net_consumption_meters_type': True,
    'pf': 'Power Factor data not available for your Envoy device.',
    'pf l1': None,
    'pf l2': None,
    'pf l3': None,
    'production': 1322,
    'production_Current l1': None,
    'production_Current l2': None,
    'production_Current l3': None,
    'production_meters_phase_count': 3,
    'production_phase l1': None,
    'production_phase l2': None,
    'production_phase l3': None,
    'seven_days_consumption': 'CTs consumption data not available for your Envoy device.',
    'seven_days_production': -1,
    'voltage': 'Voltage data not available for your Envoy device.',
    'voltage l1': None,
    'voltage l2': None,
    'voltage l3': None,
  })
# ---
# name: test_with_7_6_175_metered_noprodjson
  dict({
    'active_inverter_count': 'Active Inverter count not available for your Envoy device.',
    'battery_storage': 'Battery storage data not available for your Envoy device.',
    'consumption': 278,
    'consumption l1': None,
    'consumption l2': None,
    'consumption l3': None,
    'consumption_Current': 2.272,
    'consumption_meters_phase_count': 1,
    'daily_consumption': 'CTs consumption data not available for your Envoy device.',
    'daily_consumption_phase l1': None,
    'daily_consumption_phase l2': None,
    'daily_consumption_phase l3': None,
    'daily_production': 'CTs production data not available for your Envoy device.',
    'daily_production_phase l1': None,
    'daily_production_phase l2': None,
    'daily_production_phase l3': None,
    'endpoint_type': 'PC',
    'frequency': 50.06,
    'frequency l1': None,
    'frequency l2': None,
    'frequency l3': None,
    'get_inverters': True,
    'grid_status': None,
    'has_grid_status': True,
    'https_flag': 's',
    'inverters_production': dict({
      '12345678001': list([
        201,
        '2023-08-07 15:50:41',
      ]),
      '12345678002': list([
        202,
        '2023-08-07 15:54:13',
      ]),
      '12345678003': list([
        203,
        '2023-08-07 15:55:09',
      ]),
      '12345678004': list([
        204,
        '2023-08-07 15:51:39',
      ]),
      '12345678005': list([
        205,
        '2023-08-07 15:51:11',
      ]),
    }),
    'isConsumptionMeteringEnabled': True,
    'isProductionMeteringEnabled': True,
    'lifetime_consumption': 3902055,
    'lifetime_consumption l1': None,
    'lifetime_consumption l2': None,
    'lifetime_consumption l3': None,
    'lifetime_net_consumption': 3738205,
    'lifetime_net_consumption l1': None,
    'lifetime_net_consumption l2': None,
    'lifetime_net_consumption l3': None,
    'lifetime_net_production': 1776768,
    'lifetime_net_production l1': None,
    'lifetime_net_production l2': None,
    'lifetime_net_production l3': None,
    'lifetime_production': 3226880,
    'lifetime_production_phase l1': None,
    'lifetime_production_phase l2': None,
    'lifetime_production_phase l3': None,
    'net_consumption': -36,
    'net_consumption l1': None,
    'net_consumption l2': None,
    'net_consumption l3': None,
    'net_consumption_meters_type': True,
    'pf': 0.52,
    'pf l1': None,
    'pf l2': None,
    'pf l3': None,
    'production': 0,
    'production_Current l1': None,
    'production_Current l2': None,
    'production_Current l3': None,
    'production_meters_phase_count': 1,
    'production_phase l1': None,
    'production_phase l2': None,
    'production_phase l3': None,
    'seven_days_consumption': 'CTs production data not available for your Envoy device.',
    'seven_days_production': 'CTs production data not available for your Envoy device.',
    'voltage': 234.339,
    'voltage l1': None,
    'voltage l2': None,
    'voltage l3': None,
  })
# ---
# name: test_with_7_6_175_standard
  dict({
    'active_inverter_count': 'Active Inverter count not available for your Envoy device.',
    'battery_storage': 'Battery storage data not available for your Envoy device.',
    'consumption': 'CTs consumption data not available for your Envoy device.',
    'consumption l1': None,
    'consumption l2': None,
    'consumption l3': None,
    'consumption_Current': 'Amps consumption data not available for your Envoy device.',
    'consumption_meters_phase_count': 0,
    'daily_consumption': 'CTs consumption data not available for your Envoy device.',
    'daily_consumption_phase l1': None,
    'daily_consumption_phase l2': None,
    'daily_consumption_phase l3': None,
    'daily_production': 36462,
    'daily_production_phase l1': None,
    'daily_production_phase l2': None,
    'daily_production_phase l3': None,
    'endpoint_type': 'P',
    'frequency': 'Frequency data not available for your Envoy device.',
    'frequency l1': None,
    'frequency l2': None,
    'frequency l3': None,
    'get_inverters': True,
    'grid_status': None,
    'has_grid_status': True,
    'https_flag': 's',
    'inverters_production': dict({
      '12345678001': list([
        201,
        '2023-08-07 15:50:41',
      ]),
      '12345678002': list([
        202,
        '2023-08-07 15:54:13',
      ]),
      '12345678003': list([
        203,
        '2023-08-07 15:55:09',
      ]),
      '12345678004': list([
        204,
        '2023-08-07 15:51:39',
      ]),
      '12345678005': list([
        205,
        '2023-08-07 15:51:11',
      ]),
    }),
    'isConsumptionMeteringEnabled': False,
    'isProductionMeteringEnabled': False,
    'lifetime_consumption': 'CTs consumption data not available for your Envoy device.',
    'lifetime_consumption l1': None,
    'lifetime_consumption l2': None,
    'lifetime_consumption l3': None,
    'lifetime_net_consumption': 'CTs consumption data not available for your Envoy device.',
    'lifetime_net_consumption l1': None,
    'lifetime_net_consumption l2': None,
    'lifetime_net_consumption l3': None,
    'lifetime_net_production': 'CTs consumption data not available for your Envoy device.',
    'lifetime_net_production l1': None,
    'lifetime_net_production l2': None,
    'lifetime_net_production l3': None,
    'lifetime_production': 6139406,
    'lifetime_production_phase l1': None,
    'lifetime_production_phase l2': None,
    'lifetime_production_phase l3': None,
    'net_consumption': 'CTs consumption data not available for your Envoy device.',
    'net_consumption l1': None,
    'net_consumption l2': None,
    'net_consumption l3': None,
    'net_consumption_meters_type': False,
    'pf': 'Power Factor data not available for your Envoy device.',
    'pf l1': None,
    'pf l2': None,
    'pf l3': None,
    'production': 5740,
    'production_Current l1': None,
    'production_Current l2': None,
    'production_Current l3': None,
    'production_meters_phase_count': 0,
    'production_phase l1': None,
    'production_phase l2': None,
    'production_phase l3': None,
    'seven_days_consumption': 'CTs consumption data not available for your Envoy device.',
    'seven_days_production': 189712,
    'voltage': 'Voltage data not available for your Envoy device.',
    'voltage l1': None,
    'voltage l2': None,
    'voltage l3': None,
  })
# ---
# name: test_with_7_6_185_metered_battery
  dict({
    'active_inverter_count': 'Active Inverter count not available for your Envoy device.',
    'battery_storage': list([
      dict({
        'admin_state': 6,
        'admin_state_str': 'ENCHG_STATE_READY',
        'bmu_fw_version': '2.1.34',
        'comm_level_2_4_ghz': 4,
        'comm_level_sub_ghz': 4,
        'communicating': True,
        'created_date': 1695330323,
        'dc_switch_off': False,
        'device_status': list([
          'envoy.global.ok',
          'prop.done',
        ]),
        'encharge_capacity': 3500,
        'encharge_rev': 2,
        'img_load_date': 1695330323,
        'img_pnum_running': '2.6.5973_rel/22.11',
        'installed': 1695330323,
        'last_rpt_date': 1695769447,
        'led_status': 17,
        'maxCellTemp': 30,
        'operating': True,
        'part_num': '830-01760-r37',
        'percentFull': 15,
        'serial_num': '122249097612',
        'sleep_enabled': False,
        'temperature': 29,
        'zigbee_dongle_fw_version': '100F',
      }),
    ]),
    'consumption': 209,
    'consumption l1': None,
    'consumption l2': None,
    'consumption l3': None,
    'consumption_Current': 2.06,
    'consumption_meters_phase_count': 1,
    'daily_consumption': 63,
    'daily_consumption_phase l1': None,
    'daily_consumption_phase l2': None,
    'daily_consumption_phase l3': None,
    'daily_production': 0,
    'daily_production_phase l1': None,
    'daily_production_phase l2': None,
    'daily_production_phase l3': None,
    'endpoint_type': 'PC',
    'frequency': 50.0,
    'frequency l1': None,
    'frequency l2': None,
    'frequency l3': None,
    'get_inverters': True,
    'grid_status': None,
    'has_grid_status': True,
    'https_flag': 's',
    'inverters_production': dict({
      '12345678001': list([
        201,
        '2023-08-07 15:50:41',
      ]),
      '12345678002': list([
        202,
        '2023-08-07 15:54:13',
      ]),
      '12345678003': list([
        203,
        '2023-08-07 15:55:09',
      ]),
      '12345678004': list([
        204,
        '2023-08-07 15:51:39',
      ]),
      '12345678005': list([
        205,
        '2023-08-07 15:51:11',
      ]),
    }),
    'isConsumptionMeteringEnabled': True,
    'isProductionMeteringEnabled': True,
    'lifetime_consumption': 4074795,
    'lifetime_consumption l1': None,
    'lifetime_consumption l2': None,
    'lifetime_consumption l3': None,
    'lifetime_net_consumption': 2404339,
    'lifetime_net_consumption l1': None,
    'lifetime_net_consumption l2': None,
    'lifetime_net_consumption l3': None,
    'lifetime_net_production': 1125590,
    'lifetime_net_production l1': None,
    'lifetime_net_production l2': None,
    'lifetime_net_production l3': None,
    'lifetime_production': 4351113,
    'lifetime_production_phase l1': None,
    'lifetime_production_phase l2': None,
    'lifetime_production_phase l3': None,
    'net_consumption': 522,
    'net_consumption l1': None,
    'net_consumption l2': None,
    'net_consumption l3': None,
    'net_consumption_meters_type': True,
    'pf': 0.41,
    'pf l1': None,
    'pf l2': None,
    'pf l3': None,
    'production': -5,
    'production_Current l1': None,
    'production_Current l2': None,
    'production_Current l3': None,
    'production_meters_phase_count': 1,
    'production_phase l1': None,
    'production_phase l2': None,
    'production_phase l3': None,
    'seven_days_consumption': 19,
    'seven_days_production': 73002,
    'voltage': 712.829,
    'voltage l1': None,
    'voltage l2': None,
    'voltage l3': None,
  })
# ---
